# style-analyzer

./: CMakeLists.txt  README
docs/: indentation-analysis.txt  todo.txt  utility-subsystems.txt
git-hooks/: update
project-sanity/: check-project-consistency.sh  check-source-file-consistency.sh  git-pre-commit-hook.sh  install-git-hooks.sh
src/: ApplicationLog.cpp  ApplicationLog.h  Debug.cpp  Debug.h  FileContext.cpp  FileContext.h  FileStreams.cpp  FileStreams.h  FileSystem.cpp  FileSystem.h  IndentationContext.cpp  IndentationContext.h  IniConfiguration.cpp  IniConfiguration.h  Internationalization.cpp  Internationalization.h  LibclangHelpers.cpp  LibclangHelpers.h  Main.cpp  NameContext.cpp  NameContext.h  ProjectContext.h  Streams.cpp  Streams.h  StringFormatter.cpp  StringFormatter.h  Utilities.cpp  Utilities.h
tests/regression/file-test/: TESTPROJECT  test.cpp
tests/unit/: CMakeLists.txt  Common.cpp  Common.h
tests/unit/ini-configuration/: IniConfigurationTest.cpp
tests/unit/ini-configuration/data/: included.ini  relative-reference.ini  syntax.ini
tests/unit/ini-configuration/data/recurse/: a.ini  b.ini
tests/unit/string-formatter/: StringFormatterTest.cpp
